deploymetn.yml
apiVersion: v1
kind: Service
metadata:
  name: poc-contact
  namespace: arch
  labels:
    app: poc-contact
spec:
  ports:
    - port: 80
  selector:
    app: poc-contact
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poc-contact
  namespace: arch
  labels:
    app: poc-contact
spec:
  replicas: 3
  selector:
    matchLabels:
      app: poc-contact
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: poc-contact
    spec:
      containers:
      - image: registry.gitlab.com/kubernetes-dpsp/poc-contact:1.0
        name: poc-contact
        ports:
        - containerPort: 80
          name: poc-contact
        imagePullPolicy: Always
      imagePullSecrets:
      - name: gitlab
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: poc-contact
  namespace: arch
  annotations:
    kubernetes.io/ingress.class: "nginx"   # Using this annotation you can select the ingress controller
    nginx.ingress.kubernetes.io/auth-type: "basic" 
    nginx.ingress.kubernetes.io/auth-secret: "apigee"
    nginx.ingress.kubernetes.io/use-regex: "true"   
spec:
  rules:
    - host: apiback-poc.dpsp.io
      http:
        paths:
          - path: /poc-customer/contact/env
            backend:
              serviceName: poc-contact
              servicePort: 80
          - path: /poc-customer/.*/contact
            backend:
              serviceName: poc-contact
              servicePort: 80
          - path: /poc-customer/.*/contact/.*
            backend:
              serviceName: poc-contact
              servicePort: 80
